dark mode fix for portfolio page

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -24,6 +24,9 @@ h5 {
     margin-bottom:30px;
     border-bottom: 2px solid $blue;
     font-size: 2em;
+    .dark &{
+        border-color:$yellow;
+    }
     h1,h2,h3,h4,h5,h6{
         font-size:inherit;
         line-height: 1.6em;
