--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -7,6 +7,12 @@ $gray-mid: #7a747a;
 $gray-lighter: #dedede;
 $error: #ff0000;
 
+$dm-blue: #1a30a2;
+$dm-text: #f1f1f1;
+$dm-grey: #4d4d4d;
+$dm-darkblue: #061237;
+$yellow: #ffdb00;
+
 $site-background: $whitish;
 
 $blue: #2649f5;
