--- a/scss/component/_article.scss
+++ b/scss/component/_article.scss
@@ -45,6 +45,12 @@
             &:hover{
                 background:$blue-dark;
             }
+            .dark &{
+                &:hover{
+                    background-color: $yellow;
+                    color:$dm-darkblue;
+                }
+            }
         }
     }
     
