--- a/scss/component/_slider.scss
+++ b/scss/component/_slider.scss
@@ -159,6 +159,9 @@
                 line-height: 1.25em;
                 color: rgba(0,0,0,0.5);
                 font-family: $girloy;
+                .dark &{
+                    color:$dm-text;
+                }
                 &:before{
                     content:"";
                     display: inline-block;
@@ -194,6 +197,9 @@
 		position: absolute;
 		width: 300px;
 		z-index: 2;
+        .dark &{
+            @include dark-gradient;
+        }
 	}
 	
 	&::after {
